@@ -1,0 +1,32 @@
+[tox]
+envlist = 
+    py25,py26,py27,jython,pypy,cover
+
+[testenv]
+commands = 
+    python setup.py test -q
+deps =
+    pyramid
+    pyramid_zcml
+
+[testenv:jython]
+commands = 
+   jython setup.py test -q
+
+[testenv:cover]
+basepython =
+    python2.6
+commands = 
+    python setup.py nosetests --with-xunit --with-xcoverage
+deps =
+    pyramid
+    pyramid_zcml
+    nose
+    coverage==3.4
+    nosexcover
+
+# we separate coverage into its own testenv because a) "last run wins" wrt
+# cobertura jenkins reporting and b) pypy and jython can't handle any
+# combination of versions of coverage and nosexcover that i can find.
+# coverage==3.4 is required by nosexcover.
+
